--- a/styles/style.css
+++ b/styles/style.css
@@ -10,18 +10,129 @@
 }
 
 .header {
+  border: 1px red solid;
+  position: relative;
+  display: flex;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
+
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 183px;
+  z-index: 3;
+}
+
+.logo_place_header {
+  border: 1px red solid;
+  position: absolute;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  border: 1px red solid;
+
+  align-self: center;
+  margin-left: 64px;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  z-index: 3;
+}
+
+.header__subtitle {
+  border: 1px red solid;
+  position: absolute;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  z-index: 3;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  border: 1px red solid;
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
 .header__square-pic {
-  height: 568px;
+  border: 1px red solid;
+  position: absolute;
+  background-color: #2f80ed;
   width: 568px;
+  height: 568px;
+  right: 0;
+  top: 64px;
+  z-index: 1;
 }
 
+.description {
+  border: 1px red solid;
+  display: flex;
+
+
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.two-columns {
+  border: 1px blue solid;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  border: 1px green solid;
+  width: 175px;
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.two-columns__paragraph {
+  border: 1px rebeccapurple solid;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  border: 1px rebeccapurple solid;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 34px;
+  font-size: 24px;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
