--- a/styles/style.css
+++ b/styles/style.css
@@ -16,12 +16,6 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-  /* выше установили ограничения для секции */
-
-}
-
-.logo {
-  z-index: 3;
 }
 
 .logo_place_header {
@@ -34,7 +28,7 @@
 
 .header__title {
   align-self: center;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   width: 730px;
   line-height: 96px;
   font-size: 102px;
@@ -44,6 +38,7 @@
 
 .header__subtitle {
   position: absolute;
+  margin: 0;
   width: 388px;
   left: 64px;
   bottom: 30px;
@@ -55,6 +50,7 @@
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -112,16 +108,22 @@
 }
 
 .two-columns__paragraph {
+  margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 
-.two-columns__span-accent {
+.two-columns__paragraph:nth-child(2) {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
+  font-weight: bold;
 }
 
 
@@ -129,7 +131,6 @@
 
 
 .digits {
-  padding-top: 100px;
   padding-bottom: 100px;
   position: relative;
 }
@@ -162,14 +163,14 @@
 .table {
   margin: auto;
   width: 1100px;
+  list-style: none;
+  padding: 0;
 }
 
-
- tr {
-   display: flex;
-   justify-content: space-between;
- }
-
+.table__row {
+  display: flex;
+  justify-content: space-between;
+}
 
 .table__cell_theme_light {
   margin-top: 60px;
@@ -186,10 +187,10 @@
   font-size: 24px;
   font-weight: bold;
   color: black;
-
 }
 
 .table__text_theme_light {
+  margin: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -202,7 +203,7 @@
   margin-top: 20px;
 }
 
-tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
+.table__row:nth-child(2) > .table__cell:first-child > :nth-child(3) {
   bottom: 0;
   margin-bottom: 0;
   margin-top: 20px;
@@ -215,47 +216,51 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
 .feynman {
   position: relative;
   height: 790px;
+  padding-top: 100px;
   background-color: #f2f2f2;
-  z-index: -1;
 }
 
 .feynman__title {
+  position: relative;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
   width: 648px;
   text-align: center;
   margin: auto;
-  margin-top: 100px;
-
+  z-index: 1;
 }
 
 .feynman__subtitle {
+  position: relative;
   line-height: 52px;
   font-size: 36px;
   font-weight: normal;
   text-align: center;
   margin: auto;
   margin-top: 70px;
+  z-index: 1;
+}
+
+.feynman__image {
+  position: absolute;
+  background-image: url(../images/feynman.png);
+  width: 867px;
+  height: 637px;
+  bottom: 0;
+  left: 0;
 }
 
 .feynman__link {
   position: absolute;
+  color: #2f80ed;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   right: 48px;
   top: 50%;
   text-decoration: none;
-}
-
-.feynman__image {
-  position: absolute;
-  width: 867px;
-  height: 637px;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 
@@ -305,31 +310,37 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
   font-weight: bold;
 }
 
-.table__cell_text_dark {
+.table__text_theme_dark  {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
+
 
 .kaufman__triangle {
   position: absolute;
+  background-image: url(../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
   top: 0;
   right: -210px;
-  z-index: 1;
+  z-index: 0;
 }
 
 
 /* footer */
 
+
 .footer {
+  box-sizing: border-box;
   background-color: #1f1f1f;
   display: flex;
   padding-top: 60px;
-  padding-bottom: 40px;
+  /*padding-bottom: 40px;*/
   min-height: 350px;
   flex-basis: 711px;
+  padding-bottom: 40px;
 }
 
 .footer__columns {
@@ -351,6 +362,7 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
   flex-direction: column;
   justify-content: space-between;
   flex-basis: 711px;
+  padding: 0;
 }
 
 .logo_place_footer {
@@ -361,18 +373,20 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
 .footer__author {
   line-height: 25px;
   font-size: 18px;
+  margin-bottom: 18px;
   font-weight: normal;
   color: white;
-  margin-bottom: 18px;
-  margin-top: 18px;
+  margin: 0;
 }
 
 
 .footer__column-heading {
+  margin: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
   color: white;
+  margin: 0;
 }
 
 .footer__column-links {
@@ -380,6 +394,8 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
   flex-direction: column;
   margin-top: 20px;
   margin-bottom: 16px;
+  list-style: none;
+  padding: 0;
 }
 
 .footer__column-link {
@@ -389,7 +405,13 @@ tr:nth-child(2) .table__cell:first-child > :nth-child(3) {
   color: white;
   text-decoration: none;
 }
-.footer__column-link img {
+
+.footer__column-link:hover {
+  color: #2f80ed;
+  transition: 0.5s;
+}
+
+.footer__social-icon {
   margin-right: 10px;
   width: 16px;
   height: 16px;
