--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
 .header__title {
   align-self: center;
   margin: 0 0 0 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -39,7 +39,7 @@
 .header__subtitle {
   position: absolute;
   margin: 0;
-  width: 388px;
+  max-width: 388px;
   left: 64px;
   bottom: 30px;
   z-index: 3;
@@ -90,7 +90,7 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
   margin: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -137,7 +137,7 @@
 
 .section-title {
   text-align: center;
-  width: 60%;
+  max-width: 60%;
   margin: auto;
   margin-bottom: 20px;
 }
@@ -150,7 +150,7 @@
 
 .section-subtitle {
   text-align: center;
-  width: 60%;
+  max-width: 60%;
   margin: auto;
 }
 
@@ -225,7 +225,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   margin: auto;
   z-index: 1;
