--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,9 @@
 .resources__logo-zone {
+  border: 1px rebeccapurple solid;
   display: flex;
   justify-content: center;
   margin-top: 80px;
   list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
 }
