--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
-/* page */
-@import url(../page/page.css);
-
 /* normalize */
 @import url(../vendor/normalize.css);
+
+/* page */
+@import url(../page/page.css);
 
 /* rotation */
 @import url(../blocks/rotation/rotation.css);
@@ -86,6 +86,8 @@
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo-link/resources__logo-link.css);
+@import url(../blocks/resources/__logo-list/resources__logo-list.css);
 
 /* footer */
 @import url(../blocks/footer/footer.css);
