--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -5,7 +5,7 @@
   margin-bottom: -60px;
   padding-top: 80px;
   background-color: #f2f2f2;
-  background-image: url(../../../images/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-size: 867px 637px;
   background-position: left bottom;
   background-repeat: no-repeat;
