--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,6 +1,6 @@
 .kaufman__triangle {
   position: absolute;
-  background-image: url(../../../../images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-size: 100%;
   width: 877px;
   height: 877px;
