--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -9,4 +9,6 @@
   background-size: 867px 637px;
   background-position: left bottom;
   background-repeat: no-repeat;
+  /* max-width: 560px; */
+
 }
